--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,12 +1,14 @@
-<h1>List of articles</h1>
-
 <% @article.each do |article| %>
 
 <h2><%= article.title %></h2>
 
-<hr />
-
 <p><%= article.text %></p>
 
+<p>
+	<%= button_to 'Show', article_path(article), method: :get %> <br />
+	<%= button_to 'Edit', edit_article_path(article), method: :get %>
+</p>
+
+<hr />
 
 <% end %>
