--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,8 @@
 
 <p>
 	<%= button_to 'Show', article_path(article), method: :get %> <br />
-	<%= button_to 'Edit', edit_article_path(article), method: :get %>
+	<%= button_to 'Edit', edit_article_path(article), method: :get %> <br />
+	<%= button_to 'Delete', article_path(article), method: :delete %>
 </p>
 
 <hr />
