--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
   <body>
 
+    <%= button_to "Sign In", new_user_session_path, :method => :get %> | <%= button_to "Sign out", destroy_user_session_path, :method => :delete %>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
