--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,37 @@
   </head>
 
   <body>
+    
+    <div class="container">
 
-    <%= button_to "Sign In", new_user_session_path, :method => :get %> | <%= button_to "Sign out", destroy_user_session_path, :method => :delete %>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/articles">Posts</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link active" aria-current="page" href="/articles/new">New post</a>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <%= button_to "Sign In", new_user_session_path, :method => :get %> <%= button_to "Sign out", destroy_user_session_path, :method => :delete %>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-    <%= yield %>
+      <div>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+
+        <%= yield %>
+      </div>
+
+    </div>
 
   </body>
 </html>
