Dispaying logged in user email in header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             <li>
               <% if user_signed_in? %>
 
-              <%= button_to "Sign out", destroy_user_session_path, :method => :delete %>
+              Hello, <%= current_user.email %> <%= button_to "Sign out", destroy_user_session_path, :method => :delete %>
 
               <% else %>
 
