--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -12,7 +12,7 @@
 	</p>
 
 	<p>
-		<%= f.submit 'Create article' %>
+		<%= f.submit 'Create article', class: "btn btn-outline-secondary" %>
 	</p>
 
 <% end %>
