--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,11 +4,17 @@
 
 <p><%= article.text %></p>
 
-<p>
-	<%= button_to 'Show', article_path(article), method: :get %> <br />
-	<%= button_to 'Edit', edit_article_path(article), method: :get %> <br />
-	<%= button_to 'Delete', article_path(article), method: :delete %>
-</p>
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group me-2" role="group">
+    <%= button_to 'Show', article_path(article), method: :get, class: "btn btn-outline-secondary" %>
+  </div>
+  <div class="btn-group me-2" role="group">
+    <%= button_to 'Edit', edit_article_path(article), method: :get, class: "btn btn-outline-secondary" %>
+  </div>
+  <div class="btn-group" role="group">
+    <%= button_to 'Delete', article_path(article), method: :delete, class: "btn btn-outline-danger" %>
+  </div>
+</div>
 
 <hr />
 
