Relate author to article

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,9 @@
 <h1><%= @article.title %></h1>
 
 <p><%= @article.text %></p>
+
+<small>Cerated by <b><%= @article.author %></b></small>
+<br />
 <br />
 
 <h2>Comments:</h2>
