--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,12 +8,18 @@
   <div class="btn-group me-2" role="group">
     <%= button_to 'Show', article_path(article), method: :get, class: "btn btn-outline-secondary" %>
   </div>
+
+  <% if current_user.username == article.author %>
+
   <div class="btn-group me-2" role="group">
     <%= button_to 'Edit', edit_article_path(article), method: :get, class: "btn btn-outline-secondary" %>
   </div>
   <div class="btn-group" role="group">
     <%= button_to 'Delete', article_path(article), method: :delete, class: "btn btn-outline-danger" %>
   </div>
+
+  <% end %>
+
 </div>
 
 <hr />
