--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,27 +1,32 @@
 <% @article.each do |article| %>
 
-<h2><%= article.title %></h2>
+<div class="card">
+	<h2 class="card-header"><%= article.title %></h2>
+	<div class="card-body">
+  		<ul>
 
-<p><%= article.text %></p>
+			<p class="card-text"><%= article.text %></p>
 
-<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-  <div class="btn-group me-2" role="group">
-    <%= button_to 'Show', article_path(article), method: :get, class: "btn btn-outline-secondary" %>
-  </div>
+			<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  				<div class="btn-group me-2" role="group">
+    				<%= button_to 'Read more', article_path(article), method: :get, class: "btn btn-outline-secondary" %>
+  				</div>
 
-  <% if current_user.username == article.author %>
+  				<% if current_user.username == article.author %>
 
-  <div class="btn-group me-2" role="group">
-    <%= button_to 'Edit', edit_article_path(article), method: :get, class: "btn btn-outline-secondary" %>
-  </div>
-  <div class="btn-group" role="group">
-    <%= button_to 'Delete', article_path(article), method: :delete, class: "btn btn-outline-danger" %>
-  </div>
+  				<div class="btn-group me-2" role="group">
+    				<%= button_to 'Edit', edit_article_path(article), method: :get, class: "btn btn-outline-secondary" %>
+  				</div>
+  				<div class="btn-group" role="group">
+    				<%= button_to 'Delete', article_path(article), method: :delete, class: "btn btn-outline-danger" %>
+  				</div>
 
-  <% end %>
-
+  				<% end %>
+  		</ul>
+  	</div>
+	
 </div>
 
-<hr />
+<br />
 
 <% end %>
