--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -24,7 +24,7 @@
 	</p>
 
 	<p>
-		<%= f.submit class: "btn btn-outline-secondary" %>
+		<%= f.submit class: "btn btn-primary" %>
 	</p>
 <% end %>
 </p>
