--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -13,7 +13,7 @@
 	</p>
 
 	<p>
-		<%= f.submit 'Edit article', class: "btn btn-outline-secondary" %>
+		<%= f.submit 'Edit article', class: "btn btn-primary" %>
 	</p>
 
 <% end %>
