--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,13 +9,13 @@
 
 			<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
   				<div class="btn-group me-2" role="group">
-    				<%= button_to 'Read more', article_path(article), method: :get, class: "btn btn-secondary" %>
+    				<%= button_to 'Read more', article_path(article), method: :get, class: "btn btn-primary" %>
   				</div>
 
   				<% if article.author && current_user && article.author == current_user.username %>
 
   				<div class="btn-group me-2" role="group">
-    				<%= button_to 'Edit', edit_article_path(article), method: :get, class: "btn btn-secondary" %>
+    				<%= button_to 'Edit', edit_article_path(article), method: :get, class: "btn btn-primary" %>
   				</div>
   				<div class="btn-group" role="group">
     				<%= button_to 'Delete', article_path(article), method: :delete, class: "btn btn-danger" %>
