Update spec for article

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= @article.text %></p>
 
-<small>Cerated by <b><%= @article.author %></b></small>
+<small><%= t('articles.created_by') %><b><%= @article.author %></b></small>
 <br />
 <br />
 
